src/objects/File_Delete_Option__mdt.object
<CustomObject>
    <description>This metadata contains object, its record type and options during deleting a file.</description>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <label>Options</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Do Not Allow File Delete</fullName>
                    <default>true</default>
                    <label>Do Not Allow File Delete</label>
                </value>
                <value>
                    <fullName>Allow &amp; Track Deletion In Activity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>File Delete Option</label>
    <listViews>
        <fullName>All_Data</fullName>
        <columns>MasterLabel</columns>
        <columns>Record_Type_Name__c</columns>
        <columns>Options__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Data</label>
    </listViews>
    <pluralLabel>File Delete Options</pluralLabel>
</CustomObject>